--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -18,4 +20,4 @@ a {
 
 ul {
   list-style: none;
-}
+} 
